# cfg

./: CMakeLists.txt  add_custom_command  commands.txt  configuration.yaml  conso  copy_sd  docker-compose.yaml  docker.txt  influxdb.txt  influxdb2.0  linux  mqtt  rasp.txt  raspi.txt  traefik.toml  ubuntu
config_file_save/: docker-compose.yaml  nginx.conf
config_file_save/ha/: automations.yaml  configuration.yaml  mqtt.yaml
config_file_save/mosquitto/: mosquitto.conf
ha/: automations.yaml  configuration.yaml  scripts.yaml  zha_ikea_styrbar_e2002_gvi.yaml
influxdb/: import_essence_from_xls.py  influxdb.txt  influxdb2.0
